# deploy

./: Cargo.toml  setup.cfg
.github/workflows/: bump-version.yml  publish-binaries.yml
docs/: CHANGELOG.md  README.md
src/: main.rs
