[package]
name = "deploy"
version = "0.0.0"
authors = ["Matthew M. Keeler <keelerm84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.17"
hubcaps = "0.6.2"
indicatif = "0.15.0"
regex = "1.4.5"
structopt = "0.3.21"
tokio = { version = "0.2.25", features=["full"] }
openssl = { version = "0.10", features=["vendored"] }
